# one-on-one-assistant

./: .env.example  .gitignore  AI_SAFE_CHECKLIST.md  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  DECISIONS.md  DOMAIN_GLOSSARY.md  FIGMA_GAPS.md  IMPROVEMENTS.md  README.md  SECURITY_AUDIT_2026-01-21.md  STATE_MACHINES.md  TESTING.md  WORKPLAN.md  bootstrap_figma_process.sh  docker-compose-ssl.yml  docker-compose.yml  figma_prompt_spec.md  nginx-ssl.conf  nginx.conf  setup-server.sh
.githooks/: pre-commit
.scripts/: check-backend.sh
_legacy/: docker-compose.yml
ai_org/: README.md
backend/: .env.example  .gitignore  Dockerfile  go.mod  go.sum  main.py  railway.toml  requirements.txt  schema.sql
camunda/: Dockerfile  README.md  railway.json
connector-app/: index.html  package.json  vite.config.js
connector-app/src-tauri/: Cargo.toml  tauri.conf.json
connector-app/src-tauri/src/: ad_client.rs  connector.rs  ews_client.rs  main.rs
connector-service/: .env.example  DEPLOYMENT.md  Dockerfile  README.md  config.yaml  ekf-connector.service  go.mod  go.sum  install.sh  test_calendar.sh
frontend/: Dockerfile  package-lock.json  package.json  railway.toml  svelte.config.js  tailwind.config.js  vite.config.ts
frontend-react/: package-lock.json  package.json  vite.config.ts
migrations/: 003_messenger_tables.sql  004_fix_messenger_rls.sql  005_gantt_features.sql  006_local_auth.sql  007_force_password_change.sql  008_file_storage.sql  009_bpmn_tracking.sql  010_task_agile_fields.sql  011_channel_support.sql  012_channel_telegram_bot.sql  013_media_messages.sql  (+6 more)
(+268 files in other folders)
