[package]
name = "ekf-connector"
version = "1.0.0"
description = "EKF Team Hub On-Prem Connector"
authors = ["EKF"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# LDAP for Active Directory
ldap3 = { version = "0.11", default-features = false, features = ["tls-native"] }

# HTTP client for EWS
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# WebSocket client
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# XML parsing for EWS SOAP
quick-xml = { version = "0.37", features = ["serialize"] }

# Base64 for photos
base64 = "0.22"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
async-trait = "0.1"

# Config file
toml = "0.8"
directories = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
